# Dagster_learning

./: README.md  pyproject.toml
.tmp_dagster_home_od1uytbj/history/: runs.db
.tmp_dagster_home_od1uytbj/history/runs/: index.db
.tmp_dagster_home_od1uytbj/schedules/: schedules.db
src/ETL_project/: __init__.py  definitions.py  resources.py  test_connection.py
src/ETL_project/assets/: asset.py  assets.py  data_ext.py
