[project]
name = "ETL_project"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.6",
    "dagster-dg-cli>=1.11.6",
    "dagster-webserver>=1.11.6",
    "duckdb>=1.3.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "ETL_project"
registry_modules = [
    "ETL_project.components.*",
]


